# Audit

./: CMakeLists.txt  README.md  command.md
config/: audisp-plugin.conf  audit-daemon.conf
src/: main.cpp
src/daemon/: AuditDaemon.cpp  AuditDaemon.hpp
src/model/: AuditRecord.hpp
src/parser/: EventParser.cpp  EventParser.hpp
src/receiver/: NetlinkReceiver.cpp  NetlinkReceiver.hpp
src/writer/: LogWriter.cpp  LogWriter.hpp
systemd/: audit-daemon.service
test/: CMakeLists.txt  test_parser.cpp  test_writer.cpp
